Loading a USDZ url as the main resource renders as garbage https://bugs.webkit.org/show_bug.cgi?id=237240 rdar://88767033

Reviewed by Antoine Quint.

We can't render a USD document if the ModelDocument feature is not enabled.

* platform/MIMETypeRegistry.cpp:
(WebCore::MIMETypeRegistry::canShowMIMEType):



Canonical link: https://commits.webkit.org/247840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290562 268f45cc-cd09-0410-ab3c-d52691b4dbfc